# anki-type-test

./: .gitignore  README.md  __init__.py  build.toml  config.toml.example  justfile  pyproject.toml  schema.config.json
scripts/: anki_addon_import.py  clean.py  gen_manifest.py  install_addon.py  strip_types.py  zip_addon.py
src/: __init__.py  card_stats.py  config.json  config.py  format.py  javascript.py  review_stats.py  web_exports.py
