[project]
name = "anki-type-test"
version = "0.1.0"
description = ""
authors = [{ name = "JB Ladera", email = "domobaby10@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mypy (>=1.15.0,<2.0.0)", "aqt[qt6] (>=25.2.1,<26.0.0)", "anki (>=25.2.1,<26.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
