[project]
name = "anki-type-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["anki>=25.2.1", "aqt>=25.2.1"]

[dependency-groups]
dev = [
    "astor>=0.8.1",
    "check-jsonschema>=0.33.0",
    "pyright>=1.1.400",
    "ruff>=0.11.6",
]

[tool.pyright]
include = ["src", "scripts"]
